--- a/help-service/src/main/webapp/WEB-INF/web.xml
+++ b/help-service/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/v1/support</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 
 </web-app>
