--- a/spring-help-service/application/pom.xml
+++ b/spring-help-service/application/pom.xml
@@ -18,11 +18,11 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>ru.lib.khanin</groupId>
-            <artifactId>inmemory-broker</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>3.1.2</version>
         </dependency>
+
     </dependencies>
 
 </project>
